--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
